--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 langchain==0.3.20
+langchain_chroma==0.2.2
 langchain_community==0.3.19
 langchain_google_genai==2.0.11
+langchain_huggingface==0.1.2
 protobuf==6.30.0
+streamlit==1.43.0
