--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ langchain_google_genai==2.0.11
 langchain_huggingface==0.1.2
 protobuf<6,>=3.20
 streamlit==1.43.0
-google-generativeai
+google-ai-generativelanguage>=0.6.16,<0.7.0
+google-generativeai==0.8.4
