--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 langchain==0.3.20
 langchain_chroma==0.2.2
 langchain_community==0.3.19
-langchain_google_genai==0.0.9  # Downgraded to an older version
+langchain_google_genai==2.0.11
 langchain_huggingface==0.1.2
 protobuf<6,>=3.20
 streamlit==1.43.0
-google-generativeai==0.8.4
+google-generativeai==0.9.0  # Try a newer version that might be compatible
