--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ langchain_huggingface==0.1.2
 protobuf<6,>=3.20
 streamlit==1.43.0
 # Remove the direct google-generativeai dependency
+chromadb==0.4.18
