--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+# Core dependencies
+streamlit==1.43.0
 langchain==0.3.20
-langchain_chroma==0.2.2
 langchain_community==0.3.19
 langchain_google_genai==2.0.11
 langchain_huggingface==0.1.2
+
+# Use FAISS instead of Chroma - with the correct version
+langchain_faiss==0.1.1
+faiss-cpu>=1.7.0
+
+# PDF processing
+pypdf>=3.0.0
+
+# Embeddings
+sentence-transformers>=2.2.2
+
+# Protobuf compatibility
 protobuf<6,>=3.20
-streamlit==1.43.0
-# Remove the direct google-generativeai dependency
-chromadb==0.4.18
-sqlite3 >= 3.35.0
