--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ langchain_community==0.3.19
 langchain_google_genai==2.0.11
 langchain_huggingface==0.1.2
 
-# Use FAISS instead of Chroma - with the correct version
-langchain_faiss==0.1.1
+# Vector store - use the correct FAISS integration
 faiss-cpu>=1.7.0
 
 # PDF processing
